--- a/personal.ini
+++ b/personal.ini
@@ -1,8 +1,8 @@
 ;设置规则标志位
 ruleset=🎮 steam社区,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=📢 谷歌分析,https://raw.githubusercontent.com/leeotis/self/main/Google.list?token=GHSAT0AAAAAABYUAMTLZ5Z3JF2BCJ6O3WOYYZEHR5Q
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/leeotis/self/main/Direct.list?token=GHSAT0AAAAAABYUAMTK5ZFQLY357H5TSRHSYZEHTFQ
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/leeotis/self/main/Microsoft.list?token=GHSAT0AAAAAABYUAMTLBNAXM4E7SNPGT34GYZEHTUQ
+ruleset=📢 谷歌分析,https://raw.githubusercontent.com/leeotis/self/main/Google.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/leeotis/self/main/Direct.list
+ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/leeotis/self/main/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
