--- a/personal.ini
+++ b/personal.ini
@@ -14,13 +14,13 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇸🇬 SGMedia`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
+custom_proxy_group=🇸🇬 SGMedia`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
+custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
 custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|新|狮城|SG|Singapore)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|沪日|深日|[^-]日|JP|Japan)
 ;设置分组标志位
