--- a/personal.ini
+++ b/personal.ini
@@ -1,24 +1,24 @@
 ;设置规则标志位
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Apple.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/leeotis/self/main/Game.list
-ruleset=🇸🇬 SGMedia,https://raw.githubusercontent.com/leeotis/self/main/SGMedia.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-ruleset=🎯 全球直连,[]GEOIP,CN
-ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=🎯 Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🍎 Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Apple.list
+ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+ruleset=🎮 Game,https://raw.githubusercontent.com/leeotis/self/main/Game.list
+ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
+ruleset=🚀 Global,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🎯 Direct,[]GEOIP,CN
+ruleset=🐟 Others,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇸🇬 SGMedia`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|新|狮城|SG|Singapore)
-custom_proxy_group=🇯🇵 日本节点`select`(日本|沪日|深日|[^-]日|JP|Japan)
+custom_proxy_group=🚀 Global`select`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 Select`select`.*
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📽️ Media`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎮 Game`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎯 DIRECT`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🐟 Others`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🇸🇬 SG`select`(新加坡|新|狮城|SG|Singapore)
+custom_proxy_group=🇯🇵 JP`select`(日本|沪日|深日|[^-]日|JP|Japan)
 ;设置分组标志位
