--- a/personal.ini
+++ b/personal.ini
@@ -10,13 +10,13 @@ ruleset=🐟 Others,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 Global`select`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 Global`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🚀 Select`[]DIRECT
 custom_proxy_group=🚀 Select`select`.*
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📽️ Media`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎯 DIRECT`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🐟 Others`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🚀 Global`[]🚀 Select
+custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]🚀 Global`[]🚀 Select
+custom_proxy_group=📽️ Media`select`[]DIRECT`[]🚀 Global`[]🚀 Select
+custom_proxy_group=🎯 DIRECT`select`[]DIRECT`[]🚀 Global`[]🚀 Select
+custom_proxy_group=🐟 Others`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=🇸🇬 SG`select`(新加坡|新|狮城|SG|Singapore)
 custom_proxy_group=🇯🇵 JP`select`(日本|沪日|深日|[^-]日|JP|Japan)
 ;设置分组标志位
