--- a/personal.ini
+++ b/personal.ini
@@ -3,6 +3,7 @@ ruleset=🎯 Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=🎯 Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🍎 Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Apple.list
 ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+ruleset=📹 PrimeVideo,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrimeVideo/PrimeVideo.list
 ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=🚀 Global,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 Direct,[]GEOIP,CN
@@ -14,6 +15,7 @@ custom_proxy_group=🚀 Global`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🚀 Select`
 custom_proxy_group=🚀 Select`select`.*
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]🚀 Global`[]🚀 Select
+custom_proxy_group=📹 PrimeVideo`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=📽️ Media`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=🎯 DIRECT`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=🐟 Others`select`[]DIRECT`[]🚀 Global`[]🚀 Select
