--- a/personal.ini
+++ b/personal.ini
@@ -17,7 +17,7 @@ custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=📹 PrimeVideo`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=📽️ Media`select`[]DIRECT`[]🚀 Global`[]🚀 Select
-custom_proxy_group=🎯 DIRECT`select`[]DIRECT`[]🚀 Global`[]🚀 Select
+custom_proxy_group=🎯 Direct`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=🐟 Others`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=🇸🇬 SG`select`(新加坡|新|狮城|SG|Singapore)
 custom_proxy_group=🇯🇵 JP`select`(日本|沪日|深日|[^-]日|JP|Japan)
