--- a/selff.ini
+++ b/selff.ini
@@ -2,6 +2,7 @@
 ruleset=🎯 Direct,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
 ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+ruleset=🔗 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=📹 PrimeVideo,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrimeVideo/PrimeVideo.list
 ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PikPak/PikPak.list
 ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
@@ -10,7 +11,6 @@ ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTubeMusic/YouTubeMusic.list
 ruleset=🚀 Global,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ProxyLite/ProxyLite.list
-ruleset=🚀 Global,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🎯 Direct,[]GEOIP,CN
 ruleset=🐟 Others,[]FINAL
 ;设置规则标志位
@@ -20,6 +20,7 @@ custom_proxy_group=🚀 Global`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`
 custom_proxy_group=🚀 Select`select`.*
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]🚀 Global`[]🚀 Select
+custom_proxy_group=🔗 Google`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=📹 PrimeVideo`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=📽️ Media`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=🎯 Direct`select`[]DIRECT`[]🚀 Global`[]🚀 Select
