--- a/selff.ini
+++ b/selff.ini
@@ -10,6 +10,7 @@ ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTubeMusic/YouTubeMusic.list
+ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.list
 ruleset=🚀 Global,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ProxyLite/ProxyLite.list
 ruleset=🎯 Direct,[]GEOIP,CN
 ruleset=🐟 Others,[]FINAL
