--- a/selff.ini
+++ b/selff.ini
@@ -1,5 +1,6 @@
 ;设置规则标志位
 ruleset=🎯 Direct,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
+ruleset=🚀 Chatgpt,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=📽️ Media,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.list
 ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
@@ -20,6 +21,7 @@ ruleset=🐟 Others,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 Global`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🚀 Select`[]DIRECT
 custom_proxy_group=🚀 Select`select`.*
+custom_proxy_group=🚀 Chatgpt`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]🚀 Global`[]🚀 Select
 custom_proxy_group=🔗 Google`select`[]DIRECT`[]🚀 Global`[]🚀 Select
