--- a/selff.ini
+++ b/selff.ini
@@ -21,14 +21,14 @@ ruleset=🐟 Others,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 Global`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🚀 Select`[]DIRECT
 custom_proxy_group=🚀 Select`select`.*
-custom_proxy_group=🚀 Chatgpt`select`[]DIRECT`[]🚀 Global`[]🚀 Select
+custom_proxy_group=🚀 Chatgpt`select`[]DIRECT`[]🚀 Global`[]🚀 Select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🚀 Global`[]🚀 Select
-custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]🚀 Global`[]🚀 Select
-custom_proxy_group=🔗 Google`select`[]DIRECT`[]🚀 Global`[]🚀 Select
-custom_proxy_group=📹 PrimeVideo`select`[]DIRECT`[]🚀 Global`[]🚀 Select
-custom_proxy_group=📽️ Media`select`[]DIRECT`[]🚀 Global`[]🚀 Select
+custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]🚀 Global`[]🚀 Select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
+custom_proxy_group=🔗 Google`select`[]DIRECT`[]🚀 Global`[]🚀 Select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
+custom_proxy_group=📹 PrimeVideo`select`[]DIRECT`[]🚀 Global`[]🚀 Select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
+custom_proxy_group=📽️ Media`select`[]DIRECT`[]🚀 Global`[]🚀 Select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
 custom_proxy_group=🎯 Direct`select`[]DIRECT`[]🚀 Global`[]🚀 Select
-custom_proxy_group=🐟 Others`select`[]DIRECT`[]🚀 Global`[]🚀 Select
+custom_proxy_group=🐟 Others`select`[]DIRECT`[]🚀 Global`[]🚀 Select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
 custom_proxy_group=🇭🇰 HK`select`(港|HK|Hong Kong)
 custom_proxy_group=🇸🇬 SG`select`(新加坡|新|狮城|SG|Singapore)
 custom_proxy_group=🇯🇵 JP`select`(日本|沪日|深日|[^-]日|JP|Japan)
